tests/compile-fail/serializable_secret_misuse.stderr
error[E0277]: the trait bound `BadSecret: zeroize::DefaultIsZeroes` is not satisfied
 --> tests/compile-fail/serializable_secret_misuse.rs:8:36
  |
8 |     let _ = serde_json::to_string(&Dynamic::<BadSecret>::new(BadSecret(vec![])));
  |                                    ^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `zeroize::DefaultIsZeroes` is not implemented for `BadSecret`
 --> tests/compile-fail/serializable_secret_misuse.rs:5:1
  |
5 | struct BadSecret(Vec<u8>);
  | ^^^^^^^^^^^^^^^^
  = help: the following other types implement trait `zeroize::DefaultIsZeroes`:
            ()
            PhantomPinned
            bool
            char
            f32
            f64
            i128
            i16
          and $N others
  = note: required for `BadSecret` to implement `zeroize::Zeroize`
note: required by a bound in `Dynamic`
 --> src/dynamic.rs
  |
  | pub struct Dynamic<T: ?Sized + zeroize::Zeroize> {
  |                                ^^^^^^^^^^^^^^^^ required by this bound in `Dynamic`

error[E0599]: the function or associated item `new` exists for struct `Dynamic<BadSecret>`, but its trait bounds were not satisfied
 --> tests/compile-fail/serializable_secret_misuse.rs:8:58
  |
5 | struct BadSecret(Vec<u8>);
  | ---------------- doesn't satisfy `BadSecret: zeroize::DefaultIsZeroes` or `BadSecret: zeroize::Zeroize`
...
8 |     let _ = serde_json::to_string(&Dynamic::<BadSecret>::new(BadSecret(vec![])));
  |                                                          ^^^ function or associated item cannot be called on `Dynamic<BadSecret>` due to unsatisfied trait bounds
  |
  = note: the following trait bounds were not satisfied:
          `BadSecret: zeroize::DefaultIsZeroes`
          which is required by `BadSecret: zeroize::Zeroize`
note: the trait `zeroize::DefaultIsZeroes` must be implemented
 --> $CARGO/zeroize-$VERSION/src/lib.rs
  |
  | pub trait DefaultIsZeroes: Copy + Default + Sized {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `[u8; 32]: SerializableSecret` is not satisfied
 --> tests/compile-fail/serializable_secret_misuse.rs:9:35
  |
9 |     let _ = serde_json::to_string(&Fixed::<[u8; 32]>::new([0; 32]));
  |             --------------------- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `SerializableSecret` is not implemented for `[u8; 32]`
  |             |
  |             required by a bound introduced by this call
  |
help: the trait `Serialize` is implemented for `Fixed<T>`
 --> src/fixed.rs
  |
  | impl<T: zeroize::Zeroize + crate::SerializableSecret> serde::Serialize for Fixed<T> {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: required for `Fixed<[u8; 32]>` to implement `Serialize`
note: required by a bound in `serde_json::to_string`
 --> $CARGO/serde_json-$VERSION/src/ser.rs
  |
  | pub fn to_string<T>(value: &T) -> Result<String>
  |        --------- required by a bound in this function
  | where
  |     T: ?Sized + Serialize,
  |                 ^^^^^^^^^ required by this bound in `to_string`
